# LightASM

./: .gitignore  Ideas.md  Interpreter_output_concept  Makefile  README.md  address_space_ideas.md  configure.sh  meson.build
src/: array_contains.c  array_contains.h  console.c  console.h  consts.h  main.c  meson.build  node.h  nodearray.c  string.c  string.h  token.c  token.h
src/interpreter/: interpreter.c  interpreter.h  memory.c  memory.h  parse.c  parse.h
src/lasmc/: Makefile  consts.h  lasmc  log.c  log.h  main.c  meson.build  node.c  node.h  parser.c  parser.h  str.h  string.c  string.h  test.lasm  test2.lasm  token.c  token.h
src/lasmc/lasmc.dSYM/Contents/: Info.plist
src/lasmc/lasmc.dSYM/Contents/Resources/DWARF/: lasmc
src/old/: Makefile  array_contains.h  console.c  console.h  consts.h  main.c  node.c  string.c  token.c  token.h
src/old/interpreter/: interpreter.c  interpreter.h  memory.c  parse.c
src/old/utils/: log.c  log.h
src/repl/: repl.c  repl.h
src/utils/: error.c  error.h  log.c  log.h
